--- a/src/breslin/vserver/CMakeLists.txt
+++ b/src/breslin/vserver/CMakeLists.txt
@@ -340,6 +340,12 @@ set(HDRS
 	#question
 	../serverside/question/question.h
 	../serverside/question/questionAttempts.h
+	
+	#battle
+	../serverside/battle/battle.h
+	
+	#battle states
+	../serverside/battle/states/battleStates.h
 )
  
 set(SRCS
@@ -444,6 +450,13 @@ set(SRCS
 	#question
 	../serverside/question/question.cpp
 	../serverside/question/questionAttempts.cpp
+	
+	#battle
+	../serverside/battle/battle.cpp
+	
+	#battle states
+	../serverside/battle/states/battleStates.cpp
+)
 )
 include_directories( ${OIS_INCLUDE_DIRS}
 	${OGRE_INCLUDE_DIRS}
