--- a/src/breslin/vclient/CMakeLists.txt
+++ b/src/breslin/vclient/CMakeLists.txt
@@ -129,6 +129,7 @@ set(HDRS
 	../clientside/application/states/applicationMainPartido.h
 	../clientside/application/states/applicationPlay.h
 	../clientside/application/states/applicationPlayPartido.h
+	../clientside/application/states/applicationGameReset.h
 	../clientside/application/states/applicationGlobal.h
 	../clientside/application/states/applicationInitialize.h
 	
@@ -196,6 +197,7 @@ set(SRCS
 	../clientside/application/states/applicationMainPartido.cpp
 	../clientside/application/states/applicationPlay.cpp
 	../clientside/application/states/applicationPlayPartido.cpp
+	../clientside/application/states/applicationGameReset.cpp
 	../clientside/application/states/applicationGlobal.cpp
 	../clientside/application/states/applicationInitialize.cpp
 	
@@ -277,6 +279,7 @@ set(HDRS
 	../clientside/application/states/applicationMainPartido.h
 	../clientside/application/states/applicationPlay.h
 	../clientside/application/states/applicationPlayPartido.h
+	../clientside/application/states/applicationGameReset.h
 	../clientside/application/states/applicationGlobal.h
 	../clientside/application/states/applicationInitialize.h
 	
@@ -343,6 +346,7 @@ set(SRCS
 	../clientside/application/states/applicationMainPartido.cpp
 	../clientside/application/states/applicationPlay.cpp
 	../clientside/application/states/applicationPlayPartido.cpp
+	../clientside/application/states/applicationGameReset.cpp
 	../clientside/application/states/applicationGlobal.cpp
 	../clientside/application/states/applicationInitialize.cpp
 
