--- a/src/breslin/vclient/CMakeLists.txt
+++ b/src/breslin/vclient/CMakeLists.txt
@@ -111,14 +111,20 @@ set(HDRS
 	../clientside/rotation/rotation.h
 	../clientside/rotation/states/rotationStates.h
 	
-	#animation
-	../clientside/animation/animationBreslin.h
-	../clientside/animation/states/animationStates.h
-	../clientside/animation/ogre/animationOgre.h
-	
 	#move
 	../clientside/move/move.h
 	../clientside/move/states/moveStates.h
+	
+	#ability
+	../clientside/ability/ability.h
+	
+	#animation
+	../clientside/ability/animation/abilityAnimation.h
+	../clientside/ability/animation/abilityAnimationOgre.h
+	
+	../clientside/ability/animation/abilityAnimationState.h
+	../clientside/ability/animation/abilityAnimationStates.h
+	../clientside/ability/animation/abilityAnimationStateMachine.h
 	
 	#application
 	../clientside/application/BaseApplication.h
@@ -182,11 +188,6 @@ set(SRCS
 	#rotation
 	../clientside/rotation/rotation.cpp
 	../clientside/rotation/states/rotationStates.cpp
-
-        #animation
-        ../clientside/animation/animationBreslin.cpp
-        ../clientside/animation/states/animationStates.cpp
-        ../clientside/animation/ogre/animationOgre.cpp
 	
 	#move
 	../clientside/move/move.cpp
@@ -194,6 +195,11 @@ set(SRCS
 
 	#ablility
 	../clientside/ability/ability.cpp
+
+	#animation
+	../clientside/ability/animation/abilityAnimation.cpp
+	../clientside/ability/animation/abilityAnimationOgre.cpp
+	../clientside/ability/animation/abilityAnimationStates.cpp
 
 	#application
 	../clientside/application/BaseApplication.cpp
@@ -264,18 +270,21 @@ set(HDRS
 	#rotation
 	../clientside/rotation/rotation.h
 	../clientside/rotation/states/rotationStates.h
-
-        #animation
-        ../clientside/animation/animationBreslin.h
-        ../clientside/animation/states/animationStates.h
-        ../clientside/animation/ogre/animationOgre.h
-
+	
 	#move
 	../clientside/move/move.h
 	../clientside/move/states/moveStates.h
 	
 	#ability
 	../clientside/ability/ability.h
+	
+	#animation
+	../clientside/ability/animation/abilityAnimation.h
+	../clientside/ability/animation/abilityAnimationOgre.h
+	
+	../clientside/ability/animation/abilityAnimationState.h
+	../clientside/ability/animation/abilityAnimationStates.h
+	../clientside/ability/animation/abilityAnimationStateMachine.h
 	
  	#application
         ../clientside/application/BaseApplication.h
@@ -338,11 +347,6 @@ set(SRCS
 	#rotation
 	../clientside/rotation/rotation.cpp
 	../clientside/rotation/states/rotationStates.cpp
-
-        #animation
-        ../clientside/animation/animationBreslin.cpp
-        ../clientside/animation/states/animationStates.cpp
-        ../clientside/animation/ogre/animationOgre.cpp
 	
 	#move
 	../clientside/move/move.cpp
@@ -350,6 +354,11 @@ set(SRCS
 	
 	#ablility
 	../clientside/ability/ability.cpp
+
+	#animation
+	../clientside/ability/animation/abilityAnimation.cpp
+	../clientside/ability/animation/abilityAnimationOgre.cpp
+	../clientside/ability/animation/abilityAnimationStates.cpp
 
 	#application
         ../clientside/application/BaseApplication.cpp
