next: fix exit bug. and then do animation again.

--- a/src/breslin/vclient/CMakeLists.txt
+++ b/src/breslin/vclient/CMakeLists.txt
@@ -115,10 +115,16 @@ set(HDRS
 	../clientside/move/move.h
 	../clientside/move/states/moveStates.h
 	
+	#ability
+	../clientside/ability/ability.h
+	
 	#animation
-	../clientside/animation/animationBreslin.h
-	../clientside/animation/states/animationStates.h
-	../clientside/animation/ogre/animationOgre.h
+	../clientside/ability/animation/abilityAnimation.h
+	../clientside/ability/animation/abilityAnimationOgre.h
+	
+	../clientside/ability/animation/abilityAnimationState.h
+	../clientside/ability/animation/abilityAnimationStates.h
+	../clientside/ability/animation/abilityAnimationStateMachine.h
 	
 	#application
 	../clientside/application/BaseApplication.h
@@ -187,10 +193,13 @@ set(SRCS
 	../clientside/move/move.cpp
 	../clientside/move/states/moveStates.cpp
 
-        #animation
-        ../clientside/animation/animationBreslin.cpp
-        ../clientside/animation/states/animationStates.cpp
-        ../clientside/animation/ogre/animationOgre.cpp
+	#ablility
+	../clientside/ability/ability.cpp
+
+	#animation
+	../clientside/ability/animation/abilityAnimation.cpp
+	../clientside/ability/animation/abilityAnimationOgre.cpp
+	../clientside/ability/animation/abilityAnimationStates.cpp
 
 	#application
 	../clientside/application/BaseApplication.cpp
@@ -266,11 +275,17 @@ set(HDRS
 	../clientside/move/move.h
 	../clientside/move/states/moveStates.h
 	
-        #animation
-        ../clientside/animation/animationBreslin.h
-        ../clientside/animation/states/animationStates.h
-        ../clientside/animation/ogre/animationOgre.h
-
+	#ability
+	../clientside/ability/ability.h
+	
+	#animation
+	../clientside/ability/animation/abilityAnimation.h
+	../clientside/ability/animation/abilityAnimationOgre.h
+	
+	../clientside/ability/animation/abilityAnimationState.h
+	../clientside/ability/animation/abilityAnimationStates.h
+	../clientside/ability/animation/abilityAnimationStateMachine.h
+	
  	#application
         ../clientside/application/BaseApplication.h
 
@@ -337,10 +352,13 @@ set(SRCS
 	../clientside/move/move.cpp
 	../clientside/move/states/moveStates.cpp
 	
-        #animation
-        ../clientside/animation/animationBreslin.cpp
-        ../clientside/animation/states/animationStates.cpp
-        ../clientside/animation/ogre/animationOgre.cpp
+	#ablility
+	../clientside/ability/ability.cpp
+
+	#animation
+	../clientside/ability/animation/abilityAnimation.cpp
+	../clientside/ability/animation/abilityAnimationOgre.cpp
+	../clientside/ability/animation/abilityAnimationStates.cpp
 
 	#application
         ../clientside/application/BaseApplication.cpp
