move animatation ogre.

--- a/src/breslin/vclient/CMakeLists.txt
+++ b/src/breslin/vclient/CMakeLists.txt
@@ -116,11 +116,8 @@ set(HDRS
 	../clientside/move/states/moveStates.h
 	
 	#animation
-	../clientside/ability/animation/abilityAnimationOgre.h
-	
-	../clientside/ability/animation/abilityAnimationState.h
-	../clientside/ability/animation/abilityAnimationStates.h
-	../clientside/ability/animation/abilityAnimationStateMachine.h
+	../clientside/animation/abilityAnimationOgre.h
+	../clientside/animation/states/abilityAnimationStates.h
 	
 	#application
 	../clientside/application/BaseApplication.h
@@ -190,8 +187,8 @@ set(SRCS
 	../clientside/move/states/moveStates.cpp
 
 	#animation
-	../clientside/ability/animation/abilityAnimationOgre.cpp
-	../clientside/ability/animation/abilityAnimationStates.cpp
+	../clientside/animation/abilityAnimationOgre.cpp
+	../clientside/animation/states/abilityAnimationStates.cpp
 
 	#application
 	../clientside/application/BaseApplication.cpp
@@ -268,11 +265,8 @@ set(HDRS
 	../clientside/move/states/moveStates.h
 	
 	#animation
-	../clientside/ability/animation/abilityAnimationOgre.h
-	
-	../clientside/ability/animation/abilityAnimationState.h
-	../clientside/ability/animation/abilityAnimationStates.h
-	../clientside/ability/animation/abilityAnimationStateMachine.h
+	../clientside/animation/abilityAnimationOgre.h
+	../clientside/animation/states/abilityAnimationStates.h
 	
  	#application
         ../clientside/application/BaseApplication.h
@@ -339,9 +333,10 @@ set(SRCS
 	#move
 	../clientside/move/move.cpp
 	../clientside/move/states/moveStates.cpp
-	
-	../clientside/ability/animation/abilityAnimationOgre.cpp
-	../clientside/ability/animation/abilityAnimationStates.cpp
+
+	#animation	
+	../clientside/animation/abilityAnimationOgre.cpp
+	../clientside/animation/states/abilityAnimationStates.cpp
 
 	#application
         ../clientside/application/BaseApplication.cpp
